Fixed spacing between NavBar and Header along with removal of "How You Can Help" page

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -88,4 +88,15 @@ body {
   background-color: skyblue;
 }
 
+.ui.container.sign-in {
+  padding-top: 100px;
+}
+
+.ui.container.sign-up {
+  padding-top: 100px;
+}
+
+.ui.header.sign-out {
+  padding-top: 100px;
+}
 
